Вынес адрес фронт-энда для CORS-запроса в propertis-файл;